# SkellySim

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  model_details.md  module_template.in  pyproject.toml  setup.py
ci/: Dockerfile  Jenkinsfile
cmake/: FindSTKFMM.cmake
docs/source/: conf.py  config_generation.rst  getting_started.rst  index.rst  installation.rst  postprocessing.rst  skelly_config.rst  visualization.rst
examples/: analysis_example.py  skelly_sim_slurm_sbatch.sh
examples/body_and_fiber_with_constant_body_force/: gen_config.py
examples/body_fiber_periphery_constant_body_force/: gen_config.py
examples/ellipsoid/: gen_config.py  submit.sh
examples/listener_mode/: README.md  gen_config.py  listener_example.py
examples/oocyte/: gen_config.py  submit.sh
examples/stokes_tests/body_const_force/: calculate_velocity_error.py  gen_config.py
examples/stokes_tests/body_const_force_in_sphere/: gen_config.py  velocity_vs_z.py
examples/stokes_tests/clamped_buckling/: README.md  plot_deflection.py
examples/stokes_tests/fiber_const_force/: calc_velocity.py  gen_config.py
include/: background_source.hpp  body.hpp  body_container.hpp  body_deformable.hpp  body_ellipsoidal.hpp  body_spherical.hpp  eigen_matrix_plugin.h  eigen_quaternion_plugin.h  fiber.hpp  fiber_base.hpp  fiber_chebyshev_constraint.hpp  fiber_chebyshev_constraint_autodiff.hpp  fiber_chebyshev_penalty_autodiff.hpp  fiber_chebyshev_penalty_autodiff_external.hpp  fiber_container.hpp  fiber_container_base.hpp  fiber_container_finite_difference.hpp  fiber_container_finitedifference.hpp  fiber_finite_difference.hpp  fiber_finitedifference.hpp  fiber_state.hpp  io_maps.hpp  kernels.hpp  link.hpp  listener.hpp  params.hpp  parse_util.hpp  periphery.hpp  point_source.hpp  rng.hpp  serialization.hpp  site.hpp  skelly_chebyshev.hpp  skelly_fiber.hpp  skelly_math.hpp  skelly_sim.hpp  solver.hpp  solver_hydro.hpp  streamline.hpp  system.hpp  (+2 more)
misc/: module_template.in
notes/: model_changes.md  model_overview.tex  planning.md  skelly_sim_installation.md
paraview/: skelly_state.py
paraview/plugins/: skelly_reader.py
plugins/: skelly_reader.py
scripts/: skelly.blend  skelly_blend.py  skelly_precompute  skelly_sim.def
skelly_sim/: kernels.py  reader.py  shape_gallery.py  skelly_config.py
skelly_sim/lib/: param_tools.py  periphery.py  timer.py
src/: body.cpp  cnpy.cpp  deformable_body.cpp  dynamic_instability.cpp  fiber.cpp  fiber_container.cpp  fiber_sim.cpp  kernels.cpp  kernels.cu  link.cpp  listener.cpp  params.cpp  periphery.cpp  point_source.cpp  rng.cpp  site.cpp  skelly_debug.cpp  skelly_sim.cpp  solver_hydro.cpp  spherical_body.cpp  streamline.cpp  system.cpp  trajectory_reader.cpp  utils.cpp
src/core/: background_source.cpp  body.cpp  body_container.cpp  body_deformable.cpp  body_ellipsoidal.cpp  body_spherical.cpp  deformable_body.cpp  dynamic_instability.cpp  fiber.cpp  fiber_chebyshev_constraint.cpp  fiber_container.cpp  fiber_container_base.cpp  fiber_container_finite_difference.cpp  fiber_container_finitedifference.cpp  fiber_finite_difference.cpp  fiber_finitedifference.cpp  kernels.cpp  listener.cpp  params.cpp  periphery.cpp  point_source.cpp  rng.cpp  skelly_sim.cpp  solver_hydro.cpp  spherical_body.cpp  streamline.cpp  system.cpp  trajectory_reader.cpp  utils.cpp
src/skelly_sim/: Smooth_Closed_Surface_Quadrature_RBF.py  kernels.py  periphery.py  precompute.py  reader.py  shape_gallery.py  skelly_config.py  testing.py
tests/: 2_MTs_onCortex_R5_L1.fibers  CMakeLists.txt  cnpy.hpp  dynamic_instability_test.cpp  kernel_test.cpp  np_fib.npz  test_body.cpp  test_body.toml  test_fiber.cpp  test_fiber_system.cpp  test_gmres.cpp  test_link_matrix.cpp  test_link_matrix.toml  test_periphery.cpp  test_periphery.toml
tests/combined/: test_body_const_force.py  test_body_const_torque.py  test_body_oscillatory_force.py  test_clamped_buckling_sigma72.py  test_clamped_buckling_sigma80.py  test_ellipsoidal_body_const_force.py  test_fiber_const_force.py  test_fiber_dualfilament.py  test_fiber_uniform_background.py
tests/combined/bodies/: test_compare_quadrature.py  test_ellipsoid_assphere_constforce.py  test_ellipsoid_oblate_z_force.py  test_ellipsoid_prolate_z_force.py  test_ellipsoid_prolate_z_torque.py
tests/combined/periphery/: blender_icosphere_r12_subdiv5.stl  test_sphericalperpiphery_ellipsoidalbody.py  test_trisphereperiphery_ellipsoidalbody.py
tests/combined/regression_tests/: fdfiber_compression_data.npy  fdfiber_compression_finalpositions.npz  test_body_fdfiber_compression.py
tests/core/: CMakeLists.txt  belos_fiberpenalty_test.cpp  dynamic_instability_test.cpp  jnewton_fiberpenalty_test.cpp  kernel_test.cpp  performance_fiberpenalty_combined.cpp  performance_fiberpenalty_combined_compare.cpp  performance_hydrodynamics_combined.cpp  performance_hydrodynamics_directrotation.cpp  solver_test.cpp
tests/core/test_files/: body_precompute_body_ellipsoid_n1.npz  ellipsoidal_body_n1.toml  fiber_container_fdf_n1.toml  fiber_container_fdf_n10.toml
tests/core/unit_tests/: CMakeLists.txt  julia_fiber_penalty_results.hpp  mpi_environment.hpp  unit_test_body_ellipsoidal.cpp  unit_test_fiber_base.cpp  unit_test_fiber_chebyshev_constraint.cpp  unit_test_fiber_chebyshev_constraint_autodiff.cpp  unit_test_fiber_chebyshev_penalty_autodiff.cpp  unit_test_fiber_finite_difference.cpp  unit_test_fiber_finitedifference.cpp  unit_test_fibercontainer_finite_difference.cpp  unit_test_fibercontainer_finite_difference_mpi.cpp  unit_test_fibercontainer_finitedifference.cpp  unit_test_fibercontainer_finitedifference_mpi.cpp  unit_test_serialization.cpp  unit_test_serialization_mpi.cpp  unit_test_skelly_chebyshev.cpp
utils/: init_paraview.py  make_precompute_data.py  make_shell_precompute_data.py  skelly_config.py
utils/lib/: periphery.py  quaternion.py  shape_gallery.py
utils/paraview_utils/: body_reader.py  body_reader_request.py  fiber_reader.py  fiber_reader_request.py  field_reader.py  field_reader_request.py  trajectory_utility.py
(+24 files in other folders)
